# findIntersection2lines

./: CMakeLists.txt  READMY.md
lib/: CMakeLists.txt  lib.cpp  lib.hpp
tests/: CMakeLists.txt  test.cpp
